--- a/about.qmd
+++ b/about.qmd
@@ -2,13 +2,4 @@
 title: "About Me"
 ---
 
-This is where you get to write about yourself.
-
-If your favorite color is purple you might show a graph that uses purple.
-
-```{r}
-#| echo: false
-set.seed(123)
-hist(rnorm(10000), col = "purple", main = "Purple Histogram", xlab = "")
-```
-
+I am currently in my third year at Appalachian State University in Boone, NC. My major is environmental science with a concentration in life sciences. I am from Raleigh, NC but moved to Boone to find new adventure in a new landscape. I swim, play soccer, DJ, and love getting outside!
