--- a/project.qmd
+++ b/project.qmd
@@ -2,7 +2,5 @@
 title: "R for Data Science Projects"
 ---
 
-* [R4DS Ch. 1](https://stt2860-f2024.github.io/r4ds-exercises-devindavidson46/)
-* [Project 2]()
-* [Project 3]()
-* [Project 4]()
+* [R4DS Excersice Book](https://stt2860-f2024.github.io/r4ds-exercises-devindavidson46/)
+* [Combinind Data Frames Slides](CombiningDataFramesSlides.qmd)
