--- a/CombiningDataFramesSlides.qmd
+++ b/CombiningDataFramesSlides.qmd
@@ -4,7 +4,9 @@ author: "Devin Davidson"
 format: revealjs
 editor: visual
 ---
+
 # Set Up
+
 ```{r}
 #| echo: true
 library(tidyverse)
@@ -15,36 +17,43 @@ data(happy_full)
 ```
 
 # Question 1
-Take a look at the three data frames:
-`happy`, `happy_join_one` & `happy_full`
+
+Take a look at the three data frames: `happy`, `happy_join_one` & `happy_full`
 
 # 1: View `happy`
+
 ```{r}
 #| echo: true
 glimpse(happy)
 ```
 
 # 2: View `happy_join_one`
+
 ```{r}
 #| echo: true
 glimpse(happy_join_one)
 ```
 
 # 3: View `happy_full`
+
 ```{r}
 #| echo: true
 glimpse(happy_full)
 ```
 
 # Question 2
+
 Combine `happy` and `happy_join_one` by row.
+
 ```{r}
 #| echo: true
 bind_rows(happy, happy_join_one)
 ```
 
 # Question 3
+
 Combine `happy` and `happy_join_one` by column.
+
 ```{r}
 #| echo: true
 bind_cols(happy, happy_join_one)
